# DynHookDefs

./: .gitignore  CMakeLists.txt  README.md
include/: intrusive_list.h
src/: CMakeLists.txt  arch_utils.c  arch_utils.h  dyn_hook_defs.c  dyn_hook_defs.h  hook_def_allregs.c  hook_def_allregs.h  hook_def_args.c  hook_def_args.h  hook_def_dumpaddr.c  hook_def_dumpaddr.h  hook_def_regaddr.c  hook_def_regaddr.h  hook_def_regs.c  hook_def_regs.h  hook_def_syms.c  hook_def_syms.h  hookdef_parser.c  hookdef_parser.h  main.c  parse_utils.c  parse_utils.h  testprojectname.c
